charts/harbor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harbor-ingress
  namespace: registry
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "900"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "900"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - harbor.batsworks.com.br
      secretName: harbor-tls
  rules:
    - host: harbor.batsworks.com.br
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: harbor-core
                port:
                  number: 8080
          - path: /service
            pathType: Prefix
            backend:
              service:
                name: harbor-core
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: harbor-core
                port:
                  number: 8080
          - path: /chartrepo
            pathType: Prefix
            backend:
              service:
                name: harbor-core
                port:
                  number: 8080
          - path: /c
            pathType: Prefix
            backend:
              service:
                name: harbor-core
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor-portal
                port:
                  number: 8080
